derive_builder/tests/compile-fail/deny_empty_default.stderr
error: unexpected end of input, expected expression
 --> tests/compile-fail/deny_empty_default.rs:8:25
  |
8 |     #[builder(default = "")]
  |                         ^^
